# srishti

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  payment_agent.srishti  proof_report.json  resource_agent.srishti  srishti.toml  srishti_audit.jsonl  srishti_memory_proof_collection.json  support_agent.srishti
.github/workflows/: verify.yml
cli/: Cargo.toml
cli/src/: main.rs  project.rs
cli/src/commands/: approvals.rs  build.rs  check.rs  cluster.rs  compliance.rs  dashboard.rs  demo.rs  deploy.rs  fmt.rs  init.rs  install.rs  mod.rs  proof.rs  publish.rs  readiness.rs  registry.rs  run.rs  top.rs  verify.rs
cli/src/verification/: approval_verifier.rs  audit_verifier.rs  cluster_verifier.rs  compiler_verifier.rs  memory_verifier.rs  mod.rs  parser_verifier.rs  policy_verifier.rs  quota_verifier.rs  report.rs  rpc_verifier.rs  typechecker_verifier.rs
compiler/: Cargo.toml
compiler/src/: ast.rs  codegen.rs  diagnostics.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs  resolver.rs  typechecker.rs
dashboard/: package-lock.json  package.json  tailwind.config.js
dashboard/src/: App.tsx  index.css  main.tsx
dashboard/src/components/dashboard/: AgentActivity.tsx  AgentStatusTable.tsx  HeroMetrics.tsx  MemoryPanel.tsx  RecentEvents.tsx
dashboard/src/components/layout/: DashboardLayout.tsx  Sidebar.tsx  TopNavbar.tsx
dashboard/src/components/views/: AgentExplorer.tsx  ApprovalCenter.tsx  AuditCenter.tsx  DebugPage.tsx  PolicyCenter.tsx  WorkflowVisualizer.tsx
dashboard/src/contexts/: SrishtiContext.tsx
docs/: architecture.md  cli-reference.md  compiler-architecture.md  control_plane.md  demo.md  getting-started.md  language-spec.md  syntax.md
examples/: chatbot.srishti  customer_support_system.srishti  multi_agent_workflow.srishti  support_agent.srishti  test.srishti  travel_agent.srishti
runtime/: Cargo.toml  build.rs
runtime/proto/: agent_rpc.proto
runtime/src/: agent_runtime.rs  audit_logger.rs  event_bus.rs  lib.rs  memory.rs  policy_engine.rs  process_table.rs  semantic_engine.rs
runtime/src/cluster/: cluster_manager.rs  mod.rs  node_manager.rs  state_replication.rs
runtime/src/governance/: approval_store.rs  mod.rs
runtime/src/kernel/: mod.rs  resource_manager.rs  supervisor.rs
runtime/src/network/: agent_registry.rs  health.rs  mod.rs  rpc_client.rs  rpc_server.rs  tls.rs
std/: http.srishti  io.srishti  json.srishti  logging.srishti
test-project/: .gitignore  srishti.toml
test-project/src/: main.srishti
