[package]
name = "srishti-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Srishti Agent-Oriented Programming Language CLI"

[[bin]]
name = "srishti"
path = "src/main.rs"

[dependencies]
srishti-compiler = { path = "../compiler" }
srishti-runtime = { path = "../runtime" }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
colored = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
