[package]
name = "srishti-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Srishti Agent-Oriented Programming Language CLI"

[[bin]]
name = "srishti"
path = "src/main.rs"

[dependencies]
srishti-compiler = { path = "../compiler" }
srishti-runtime = { path = "../runtime" }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
colored = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full", "sync", "rt", "macros", "net"] }
anyhow = "1.0"
rand = "0.8"
axum = { version = "0.7", features = ["tokio", "macros"] }
tower-http = { version = "0.5.2", features = ["cors", "fs"] }
chrono = "0.4"
tokio-stream = "0.1"
async-stream = "0.3"
