[package]
name = "srishti-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
google-genai = "0.0.2"
colored = "3.1.1"
